# xpsnr

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  XpsnrApp.cpp  bench.cpp  program_options_lite.h  yuv_reader.hpp
src/: CMakeLists.txt  calc.h
src/include/: distortion.h  sa_act.h  ta_act.h  x86_common.h  xpsnr.h  xpsnr.hpp
src/sources/: distortion.h  distortion_ssd.cpp  sa_act.cpp  sa_act.h  ta_act.cpp  ta_act.h  x86_common.h  xpsnr.cpp
src/sources/x86/: distortion_avx2.cpp  distortion_sse.cpp  sa_act_avx2.cpp  sa_act_sse.cpp  ta_act_avx2.cpp  ta_act_sse.cpp
test/: CMakeLists.txt  dist_test.cc  saact_test.cc  taact_test.cc
